--- a/TraceIt/Views/LoginPage.xaml
+++ b/TraceIt/Views/LoginPage.xaml
@@ -77,6 +77,7 @@
                         <x:String>2018</x:String>
                         <x:String>2019</x:String>
                         <x:String>2020</x:String>
+                        <x:String>2021</x:String>
                     </Picker.Items>
                 </controls:CustomPicker>
             </Frame>
